# bbfs

./: .gitignore  .gitmodules  Cargo.toml  README.md  flake.nix
bbfs-api/: Cargo.toml
bbfs-api/src/: lib.rs
bbfs-cli/: Cargo.toml
bbfs-cli/src/: main.rs
bbfs-dokan/: Cargo.toml
bbfs-dokan/src/: lib.rs
bbfs-fuse/: Cargo.toml
bbfs-fuse/src/: lib.rs
bbfs-scrape/: Cargo.toml
bbfs-scrape/src/: client.rs  course_main_data.rs  lib.rs  list_content_data.rs  memberships_data.rs
cli/: Cargo.toml
cli/src/: main.rs
cookie-monster/: Cargo.toml
cookie-monster/src/: headless.rs  lib.rs  main.rs  webview.rs
fs/: Cargo.toml
fs/src/: example.rs  lib.rs
headless-cookie-monster/: Cargo.toml
headless-cookie-monster/src/: lib.rs  main.rs
lib-bb/: Cargo.toml
lib-bb/src/: client.rs  course_main_data.rs  http.rs  lib.rs  list_content_data.rs  memberships_data.rs  mock_bb_interface.rs  ultra_data.rs
static/: banner.png.kra
