[workspace]
resolver = "2"

members = [
    "bbfs-api",
    "bbfs-dokan",
    "bbfs-cli",
    "bbfs-fuse",
    "bbfs-scrape",
    "cookie-monster",
]

[patch.crates-io]
ureq = { path = "ureq" }

[workspace.dependencies]
bbfs-api = { path = "./bbfs-api" }
bbfs-dokan = { path = "./bbfs-dokan" }
bbfs-fuse = { path = "./bbfs-fuse" }
bbfs-scrape = { path = "./bbfs-scrape" }
cookie-monster = { path = "./cookie-monster" }

anyhow = "1.0.75"
cookie = "0.16.1"
cookie_store = "0.19.0"
nix = "0.27.1"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
ureq = "2.7.1"
winapi = "0.3.9"
