[package]
name = "bbfs-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[target."cfg(unix)".dependencies]
nix = "0.27.1"

[target."cfg(windows)".dependencies]
winapi = { version = "0.3.9", features = ["ntdef"] }
