[package]
name = "bbfs-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "bbfs"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
argh = "0.1.12"
cookie-monster.workspace = true
cookie_store.workspace = true
etcetera = "0.8.0"
bbfs-scrape.workspace = true
serde.workspace = true
serde_json.workspace = true
ureq.workspace = true

[target.'cfg(unix)'.dependencies]
bbfs-fuse.workspace = true
daemonize-me = "2.0.1"

[target.'cfg(windows)'.dependencies]
bbfs-dokan.workspace = true
