[package]
name = "bbfs-fuse"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
bbfs-api = { path = "../bbfs-api" }
dotenv = "0.15.0"
fuser = "0.13.0"
libc = "0.2.147"
nix = { version = "0.27.1", default-features = false, features = ["user"] }
