[package]
name = "bbfs-scrape"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
regex = "1.9.3"
dotenv = "0.15.0"
serde = { version = "1.0.186", features = ["derive"] }
serde_json = "1.0.105"
soup = "0.5.1"
ureq = "2.7.1"
pct-str = "2.0.0"
time = { version = "0.3.27", features = ["serde", "serde-human-readable", "parsing"] }

[target.'cfg(unix)'.dependencies]
nix = { version = "0.26.2", default-features = false }

[target.'cfg(windows)'.dependencies]
winapi = "0.3.9"
