[package]
name = "bbfs-scrape"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow.workspace = true
bbfs-api.workspace = true
dotenv = "0.15.0"
pct-str = "2.0.0"
regex = "1.9.3"
serde.workspace = true
serde_json.workspace = true
soup = "0.5.1"
time = { version = "0.3.27", features = ["serde", "serde-human-readable", "parsing"] }
ureq.workspace = true

[target.'cfg(unix)'.dependencies]
nix.workspace = true

[target.'cfg(windows)'.dependencies]
winapi.workspace = true
