[package]
name = "cli"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.75"
argh = "0.1.12"
cookie-monster = { path = "../cookie-monster" }
cookie_store = "^0.19"
daemonize-me = "2.0.1"
etcetera = "0.8.0"
fs = { path = "../fs" }
fuser = "0.13.0"
lib-bb = { path = "../lib-bb" }
serde = { version = "1.0.187", features = ["derive"] }
serde_json = "1.0.105"
ureq = { version = "2.7.1", features = ["cookies"] }
url = "2.4.0"
