[package]
name = "cookie-monster"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.75"
block = "0.1.6"
cookie = "^0.16.1"
objc = "0.2.7"
objc-foundation = "0.1.1"
wry = "0.31.1"

[target.'cfg(target_os = "linux")'.dependencies]
gio = "^0.16.0"
gtk = "^0.16.0"
webkit2gtk = { version = "1.1.0", features = ["v2_20"] }

