[package]
name = "cookie-monster"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.75"
cookie = "^0.16.1"
etcetera = "0.8.0"
wry = "0.31.1"
ureq = "2.7.1"
url = "2.4.1"
rpassword = "7.2.0"
webdriver-install = "0.3.2"
tokio = "1.32.0"
fantoccini = "0.19.3"
futures = "0.3.28"
serde_json = "1.0.105"

[target.'cfg(target_os = "linux")'.dependencies]
gio = "^0.16.0"
gtk = "^0.16.0"
webkit2gtk = { version = "1.1.0", features = ["v2_20"] }

[target.'cfg(target_os = "macos")'.dependencies]
block = "0.1.6"
objc = "0.2.7"
objc-foundation = "0.1.1"

[target.'cfg(windows)'.dependencies]
webview2-com = "0.25.0"
widestring = "1.0.2"
windows = "0.48.0"
