[package]
name = "cookie-monster"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow.workspace = true
cookie.workspace = true
etcetera = "0.8.0"
fantoccini = "0.19.3"
futures = "0.3.28"
rpassword = "7.2.0"
serde_json.workspace = true
tokio = { version = "1.32.0", features = ["rt-multi-thread"] }
ureq.workspace = true
url = "2.4.1"
webdriver-install = "0.3.2"
wry = "0.31.1"

[target.'cfg(target_os = "linux")'.dependencies]
gio = "^0.16.0"
gtk = "^0.16.0"
webkit2gtk = { version = "1.1.0", features = ["v2_20"] }

[target.'cfg(target_os = "macos")'.dependencies]
block = "0.1.6"
objc = "0.2.7"
objc-foundation = "0.1.1"

[target.'cfg(windows)'.dependencies]
webview2-com = "0.25.0"
widestring = "1.0.2"
windows = "0.48.0"
