[package]
name = "fs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "example"
path = "src/example.rs"

[dependencies]
dotenv = "0.15.0"
fuser = "0.13.0"
libc = "0.2.147"
nix = { version = "0.26.2", default-features = false, features = ["user"] }

[dependencies.lib-bb]
path = "../lib-bb"
